# hackathon-procrastinators

./: .gitignore  CMakeLists.txt  README.md
assets/: Untitled.blend  Untitled.blend1  map.blend  map.blend1  spaceship.blend  spaceship.blend1
dependencies/include/glad/: glad.h
src/: config.h  glad.c  main.cpp
src/Renderer/: renderer.cpp  renderer.h
src/WindowHandler/: WindowHandler.cpp  WindowHandler.h
src/camera/: camera.cpp  camera.h
src/log/: log.cpp  log.h
src/shaders/: shader.cpp  shader.frag  shader.h  shader.vert
